Finally weekend. Added webcontrat_commentaire table, now extracts the last comment and displays it with the date in tthe table Fixed dark mode bug Added Yes/No with green/red background color if order is Paid or not
TODO:
if comment is clicked, it will get all the previous comments with dates emails
login system with timeout system that automatically logs off after 3 hours
group system for user/superuser
tasks system GENERAL and USER_SPECIFIC
'Prochaine_relance' field in 'webcontrat_commentaire' has to be searchable using the Date search in index.html
email field has to be a mailto:
add 'SURFACE' column to webcontrat_contrat
INSERT new comments, UPDATE old comments {prev,last,date}
PDF and EML file uploader

--- a/www/searchLight.css
+++ b/www/searchLight.css
@@ -18,7 +18,8 @@ table, th, td {
 }
 
 th, td {
-    padding: 13px;
+    padding: 7px;
+    font-style: italic;
 }
 
 #tableSub {
@@ -27,4 +28,12 @@ th, td {
     text-decoration: underline;
     border: none;
     cursor: pointer;
+}
+
+#isPaid {
+    background-color: #008800;
+}
+
+#isNotPaid {
+    background-color: #880000;
 }
